# Game-of-life

./: README.md  my-project.cabal  sample  save
app/: Main.hs
scenes/: save  singleGlider
src/: Life.hs  MyProject.hs  Stack.hs
