name:                my-project
version:             0.1
-- synopsis:
-- description:
-- homepage:
-- license:
-- license-file:
author:              Author name here
maintainer:          author@email.com
copyright:           2017 Author name here
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall -fno-warn-type-defaults
  exposed-modules:     Life, Stack
  build-depends:       base >= 4.7 && < 5
                     , gloss
  default-language:    Haskell2010

executable my-project
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , my-project
  default-language:    Haskell2010


